# bscor

./: README.md
build-scaffold_routing_rectification-Desktop_Qt_5_9_9_MSVC2017_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  octahedron.dimacs  octahedron.ecode  octahedron.ntrail  octahedron.rpoly  octahedron.trail  octahedron.vcode
build-scaffold_routing_rectification-Desktop_Qt_5_9_9_MSVC2017_64bit-Release/.cmake/api/v1/reply/: cache-v2-da333890d8818aa3f679.json  cmakeFiles-v1-5386d7e197739e52dadc.json  codemodel-v2-63183cc323632e249fa5.json  index-2021-06-24T07-36-34-0135.json  target-PXPHYSICS-Release-cd463bf3316d1fa85750.json  target-scaffold-routing-rectification-Release-ed9977e3dd4cf0fd60e7.json
scaffold-routing-rectification-master/include/: Definition.h  Helix.h  Utility.h
scaffold-routing-rectification-master/scaffold-routing-rectification/: scaffold-routing-rectification.vcxproj
scaffold-routing-rectification-master/scaffold-routing-rectification/x64/Release/scaffold.DBDDFBE1.tlog/: cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  scaffold-routing-rectification.lastbuildstate
scaffold_routing_rectification/: CMakeLists.txt  Relaxmain.cpp  Relaxmain.h  main.cpp
